<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/view_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x5"
            android:background="@color/colorAccent" />
        <!--第一部分-->
        <RelativeLayout
            android:id="@+id/rel_part_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--申请日期-->
            <RelativeLayout
                android:layout_marginLeft="@dimen/x5"
                android:id="@+id/rel_start_date"
                android:layout_marginTop="@dimen/x10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--出票日期-->
                <TextView
                    android:id="@+id/tv_draw_ticket_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_draw_ticket_data"/>
                <TextView
                    android:id="@+id/tv_draw_ticket_data_num"
                    android:layout_toRightOf="@+id/tv_draw_ticket_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_start_data_nun"/>
                <!--承兑日期-->
                <TextView
                    android:id="@+id/tv_accept_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:layout_below="@+id/tv_draw_ticket_data"/>
                <TextView
                    android:id="@+id/tv_accept_num"
                    android:layout_below="@+id/tv_draw_ticket_data_num"
                    android:layout_toRightOf="@+id/tv_accept_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_start_data_nun"/>
                <!--到期日期-->
                <TextView
                    android:id="@+id/tv_expire_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:text="@string/tv_expire_data"
                    android:layout_marginTop="@dimen/x5"
                    android:layout_below="@+id/tv_accept_data"/>
                <TextView
                    android:id="@+id/tv_expire_num"
                    android:layout_below="@+id/tv_accept_num"
                    android:layout_toRightOf="@+id/tv_expire_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_start_data_nun"/>
                <!--状态-->
                <TextView
                    android:id="@+id/tv_wait_approve"
                    android:layout_marginLeft="@dimen/x5"
                    android:padding="@dimen/x5"
                    android:textColor="@color/white"
                    android:background="@drawable/wait_approve_shape"
                    android:layout_marginTop="@dimen/x5"
                    android:layout_below="@+id/tv_expire_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_holder"/>
                <!--金额-->
                <TextView
                    android:id="@+id/tv_apply_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$625625"
                    android:textColor="@color/tv_money_color"
                    android:textSize="@dimen/x20"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/x15"/>
            </RelativeLayout>

        </RelativeLayout>
        <!--第二条线-->
        <View
            android:id="@+id/line_two"
            android:layout_marginTop="@dimen/x5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_below="@+id/rel_part_one"
            android:background="@color/view_line"/>
        <!--借款人和贷款人-->
        <RelativeLayout
            android:id="@+id/rel_receipet_and_payment"
            android:layout_below="@+id/line_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--付款人-->
            <RelativeLayout
                android:id="@+id/rel_payment"
                android:layout_marginLeft="@dimen/x5"
                android:layout_marginTop="@dimen/x10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:text="@string/tv_payment"/>
                <TextView
                    android:id="@+id/tv_set_borrower"
                    android:layout_toRightOf="@+id/tv_payment"
                    android:layout_marginLeft="@dimen/x2"
                    android:text="平台"
                    android:textColor="@color/charcoal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!--收款人-->
            <RelativeLayout
                android:id="@+id/rel_tv_receipet"
                android:layout_marginLeft="@dimen/x5"
                android:layout_marginTop="@dimen/x10"
                android:layout_below="@+id/rel_payment"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/x7"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_receipet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:text="@string/tv_receipet"/>
                <TextView
                    android:id="@+id/set_tv_rel_out_glod"
                    android:layout_marginLeft="@dimen/x2"
                    android:text="平台"
                    android:textColor="@color/charcoal_grey"
                    android:layout_toRightOf="@+id/tv_receipet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <!--通过和拒绝-->
            <RelativeLayout
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_release"
                    android:padding="@dimen/x5"
                    android:textColor="@color/charcoal_grey"
                    android:background="@drawable/tv_approv_reject_shape"
                    android:layout_width="@dimen/x60"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_publish"/>
                <TextView
                    android:id="@+id/tv_recall"
                    android:padding="@dimen/x5"
                    android:textColor="@color/charcoal_grey"
                    android:background="@drawable/tv_approv_reject_shape"
                    android:layout_marginLeft="@dimen/x5"
                    android:layout_toRightOf="@+id/tv_release"
                    android:layout_marginRight="@dimen/x15"
                    android:layout_width="@dimen/x60"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_recall"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>