<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x5"
            android:background="@color/colorAccent" />
        <!--第一部分-->
        <RelativeLayout
            android:id="@+id/rel_part_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--出票日期和到期日期-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x10">
                <!--出票日期-->
                <TextView
                    android:id="@+id/tv_draw_ticket_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_draw_ticket_data"
                    android:textColor="@color/charcoal_grey" />

                <TextView
                    android:id="@+id/tv_draw_ticket_data_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/x5"
                    android:layout_toRightOf="@+id/tv_draw_ticket_data"
                    android:text="@string/tv_start_data_nun"
                    android:textColor="@color/charcoal_grey" />
                <!--承兑日期-->
                <TextView
                    android:id="@+id/tv_accept_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:layout_below="@+id/tv_draw_ticket_data"/>
                <TextView
                    android:id="@+id/tv_accept_num"
                    android:layout_below="@+id/tv_draw_ticket_data_num"
                    android:layout_toRightOf="@+id/tv_accept_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/charcoal_grey"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_start_data_nun"/>
                <!--到期日期-->
                <TextView
                    android:id="@+id/tv_expire_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_accept_data"
                    android:layout_marginTop="@dimen/x5"
                    android:text="@string/tv_expire_data"
                    android:textColor="@color/charcoal_grey" />

                <TextView
                    android:id="@+id/tv_expire_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_accept_num"
                    android:layout_marginTop="@dimen/x5"
                    android:layout_toRightOf="@+id/tv_expire_data"
                    android:text="@string/tv_start_data_nun"
                    android:textColor="@color/charcoal_grey" />
            </RelativeLayout>
            <!--出票日期-->
            <RelativeLayout
                android:id="@+id/rel_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x5"
                android:layout_marginTop="@dimen/x10">

                <!--原价和现价-->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/x15"
                    android:layout_marginBottom="@dimen/x10">
                    <!--金额-->
                    <TextView
                        android:id="@+id/tv_value_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="¥625625"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/tv_money_color_two"
                        android:textSize="@dimen/x15" />
                    <!--现价-->
                    <TextView
                        android:id="@+id/current_prince"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_value_number"
                        android:textColor="@color/tv_money_color"
                        android:layout_centerHorizontal="true"
                        android:textSize="@dimen/x30"
                        android:text="¥62556" />
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>
        <!--第二条线-->
        <View
            android:id="@+id/line_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_below="@+id/rel_part_one"
            android:layout_marginTop="@dimen/x5"
            android:background="@color/view_line" />
        <!--借款人和贷款人-->
        <RelativeLayout
            android:id="@+id/rel_receipet_and_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_two">
           <RelativeLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/x10"
               android:layout_centerVertical="true">
               <TextView
                   android:id="@+id/tv_publisher"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/charcoal_grey"
                   android:text="发布者:"/>
               <TextView
                   android:id="@+id/set_published"
                    android:layout_toRightOf="@+id/tv_publisher"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/charcoal_grey"
                   android:text="张三"
                   />
           </RelativeLayout>

            <!--通过和拒绝-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tv_buy"
                    android:layout_width="@dimen/x100"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x10"
                    android:layout_marginBottom="@dimen/x10"
                    android:background="@drawable/tv_approv_reject_shape"
                    android:gravity="center"
                    android:padding="@dimen/x5"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_buy"
                    android:textColor="@color/charcoal_grey" />

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>